--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "cli-sort",
+  "name": "sls-node-1",
   "version": "1.0.0",
   "main": "bin/index.js",
   "scripts": {
-    "test": "run"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Viktoriia Koniukhova",
   "license": "ISC",
   "bin": {
-    "mycli": "./bin/index.js"
+    "sortcli": "./bin/index.js"
   }
 }
